examples/test/testpolicy17524.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17524
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key13: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value38
          key36: value47
          key1: value18
      podSelector:
        matchLabels:
          key48: value16
